@@ -74,7 +74,7 @@
     outline         : 0;
     text-decoration : none;
     text-shadow     : 1px 1px 1px #000;
-    overflow:auto;
+    overflow        : auto;
 }
 
 #menu li:hover a {
@@ -116,23 +116,23 @@
 }
 
 .dropdown_1column {
-    width : 200px;
+    width : 185px;
 }
 
 .dropdown_2columns {
-    width : 400px;
+    width : 370px;
 }
 
 .dropdown_3columns {
-    width : 600px;
+    width : 555px;
 }
 
 .dropdown_4columns {
-    width : 800px;
+    width : 740px;
 }
 
 .dropdown_5columns {
-    width : 1000px;
+    width : 925px;
 }
 
 #menu li:hover .dropdown_1column,
@@ -154,26 +154,27 @@
     position     : relative;
     margin-left  : 5px;
     margin-right : 5px;
+    overflow     : auto;
 }
 
 .col_1 {
-    width : 190px;
+    width : 175px;
 }
 
 .col_2 {
-    width : 390px;
+    width : 350px;
 }
 
 .col_3 {
-    width : 590px;
+    width : 525px;
 }
 
 .col_4 {
-    width : 790px;
+    width : 700px;
 }
 
 .col_5 {
-    width : 990px;
+    width : 875px;
 }
 
 #menu .menu_right {
@@ -204,7 +205,7 @@
 }
 
 #menu h2 {
-    text-transform  : uppercase;
+    text-transform : uppercase;
     font-size      : 14px;
     font-weight    : 400;
     letter-spacing : -1px;
@@ -214,20 +215,20 @@
 }
 
 #menu h3 {
-    text-transform  : uppercase;
-    font-size   : 12px;
+    text-transform : uppercase;
+    font-size      : 12px;
     font-weight    : 400;
-    margin      : 7px 0 4px 0;
-    padding-top : 7px;
+    margin         : 7px 0 4px 0;
+    padding-top    : 7px;
     /*border-top  : 1px solid #888888;*/
 }
 
 #menu h4 {
-    text-transform  : uppercase;
-    font-size     : 11px;
+    text-transform : uppercase;
+    font-size      : 11px;
     font-weight    : 400;
-    margin-bottom : 4px;
-    padding-top   : 7px;
+    margin-bottom  : 4px;
+    padding-top    : 7px;
 }
 
 #menu p {
@@ -312,7 +313,7 @@
     margin      : 0;
     float       : none;
     text-align  : left;
-    width       : 190px;
+    width       : 175px;
 }
 
 #menu li ul li:hover {
@@ -327,7 +328,7 @@
     border                : 1px solid #bbbbbb;
     /*margin                : 0px 0px 4px 0px;*/
     /*padding               : 4px 6px 4px 6px;*/
-    width                 : 188px;
+    width                 : 172px;
     /* Rounded Corners */
     -moz-border-radius    : 5px;
     -webkit-border-radius : 5px;
@@ -343,26 +344,49 @@
 }
 
 #menu .child {
-    padding-left  : 10px;
+    padding-left : 10px;
     /*min-height: 50px;*/
 }
 
 #menu .menuheader h4 {
-    font-size: 115%;
-    font-weight: bolder;
+    font-size   : 115%;
+    font-weight : bolder;
 }
 
 #menu .menuitem {
     padding-left  : 5px;
-    padding-right  : 5px;
+    padding-right : 5px;
     border-bottom : 1px solid #d0d0d0;
     border-right  : 1px solid #d0d0d0;
 }
 
 #menu .menuitem.desc {
-    min-height: 55px;
+    min-height : 55px;
 }
 
 #menu .column {
     float : left;
+}
+
+#menu .freeform-menu h2, #menu .freeform-menu h3, #menu .freeform-menu h4 {
+    font-size   : 115%;
+    font-weight : bold;
+}
+
+#menu .freeform-menu .item-actions a, #menu .freeform-menu .module-actions a {
+    display : inline;
+}
+
+#menu .freeform-menu .item-actions, #menu .freeform-menu .module-actions, #menu .freeform-menu img {
+    clear    : both;
+    overflow : hidden;
+}
+
+#menu .freeform-menu p:after {
+    content    : ".";
+    display    : block;
+    height     : 0;
+    overflow   : hidden;
+    clear      : both;
+    visibility : hidden;
 }
