@@ -2,7 +2,6 @@ version 2.1.0
 This release focuses on new calendar & forms modules, e-Commerce as OOTB experience, integration of jQuery/Twitter Bootstrap
   - adds optional nested comments, and optional per-item comment disabling
   - adds optional comments to filedownload module items
-  - adds pagination option of 'More', useful for sidebar views
   * removes extra themes to reduce size of package, available as separate addon downloads
   - adds better version change information to initial upgrade page
   - adds optional color/style to categories
@@ -10,5 +9,7 @@ This release focuses on new calendar & forms modules, e-Commerce as OOTB experie
     *- converts existing calendars
     -- adds color-coded categories, tags, and merge item
     -- add color-coded aggregation of external Google & iCal calendars, and online event registrations
-  - adds new 'mega-menu' navigation view
+  - adds new 'mega-menu' navigation view with new free-form page/menu type for embedding modules
+  - adds random sorting/sequence to photo album/slideshows
+  - adds new built-in database manager
   - plus many, many other tweaks, fixes, and features
